# pop-launcher-plugin-duckduckgo-bangs

./: .gitignore  CHANGELOG.adoc  Cargo.toml  Makefile  README.adoc  flake.nix  shell.nix
.github/workflows/: build.yml  pre-release.yml  release.yml
src/: config.rs  main.rs  plugin.ron  utils.rs
