[package]
name = "pop-launcher-plugin-duckduckgo-bangs"
version = "2.0.0"
edition = "2018"
publish = false

[dependencies]
curl = "0.4"
dirs = "4"
serde = "1"
serde_json = "1.0"
pop-launcher = { git = "https://github.com/pop-os/launcher", rev = "1.2.1" }
urlencoding = "2"

[[bin]]
name = "bangs"
path = "src/main.rs"
