[package]
name = "pop-launcher-plugin-duckduckgo-bangs"
version = "2.0.0"
edition = "2018"
publish = false

[dependencies]
curl = "0.4"
dirs = "4"
open = "3"
serde = "1"
serde_json = "1.0"
pop-launcher = { git = "https://github.com/pop-os/launcher", rev = "1.2.1" }
rayon = "1"
tokio = { version = "1", features = [ "full" ] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2"

[[bin]]
name = "bangs"
path = "src/main.rs"
